tests/golden/fixtures/syntax-symbolic-subscripts-err-zero-count/expected.err
Error: symbolic subscript field '.string' count must be >= 1, found 0
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-zero-count/input.k65:2:13 ]
   │
 2 │     .string[0]:byte
   │             ┬  
   │             ╰── here
───╯
